249 OpenAPI endpoint implementation findCapitalCommitmentsByManagingCodeCapitalProjectId
     - Updated OpenAPI documentation to remove "under construction" emoji glag

     Implement find capital commitments by managing code / capital project id id endpoint
     - cap com by mng code cap proj id controller, module, repository and service
     - e2e and service unit tests
     - added copy to README to add context regarding schema changes
