# src/capital-project/capital-project.repository.schema.ts
@@ -1,11 +1,22 @@
 import {
   agencyBudgetEntitySchema,
   agencyEntitySchema,
+  capitalCommitmentEntitySchema,
   capitalCommitmentFundEntitySchema,
   capitalProjectEntitySchema,
 } from "src/schema";
 import { mvtEntitySchema } from "src/schema/mvt";
 import { z } from "zod";
+
+export const checkByManagingCodeCapitalProjectIdRepoSchema =
+  capitalProjectEntitySchema.pick({
+    id: true,
+    managingCode: true,
+  });
+
+export type CheckByManagingCodeCapitalProjectIdRepo = z.infer<
+  typeof checkByManagingCodeCapitalProjectIdRepoSchema
+>;
 
 export const findByManagingCodeCapitalProjectIdRepoSchema = z.array(
   capitalProjectEntitySchema.extend({
@@ -22,3 +33,24 @@ export type FindByManagingCodeCapitalProjectIdRepo = z.infer<
 export const findTilesRepoSchema = mvtEntitySchema;
 
 export type FindTilesRepo = z.infer<typeof findTilesRepoSchema>;
+
+export const findCapitalCommitmentsByManagingCodeCapitalProjectIdRepoSchema =
+  z.array(
+    capitalCommitmentEntitySchema
+      .pick({
+        id: true,
+        type: true,
+        plannedDate: true,
+        budgetLineCode: true,
+        budgetLineId: true,
+      })
+      .extend({
+        sponsoringAgency: agencyBudgetEntitySchema.shape.sponsor,
+        budgetType: agencyBudgetEntitySchema.shape.type,
+        totalValue: capitalCommitmentFundEntitySchema.shape.value,
+      }),
+  );
+
+export type FindCapitalCommitmentsByManagingCodeCapitalProjectIdRepo = z.infer<
+  typeof findCapitalCommitmentsByManagingCodeCapitalProjectIdRepoSchema
+>;
